# nl2sql

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  run_server.py  settings.ini  tox.ini
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/daksh/prompts/: 10-create-vision-doc.chatmode.md  20-create-happy-flow.chatmode.md  30-create-business-requirement.chatmode.md  31-brd-overview.chatmode.md
.github/workflows/: ci-cd.yml
data/iirm/: schema-pgsql.txt
data/schemas/pgsql/: iirm.txt
docs/: brd-overview.md  epics.md  index.md  vision.md
nbs/: 0-greet.ipynb  1-discover-pgsql.ipynb  1-discover.ipynb  2-duckdb.ipynb  index.ipynb
overrides/: roadmap.md
src/: pyproject.toml
src/nl2sql/: __init__.py  __pre_init__.py  _modidx.py  api.py  chat_service.py  dbinteraction.py  dspy_prompt_generator.py  greetings.py  policy_sql_agent.py
src/nl2sql/config/: constants.py  endpoints.py
src/nl2sql/schemas/: pgsql.py
tests/: __init__.py  run_server.py  test_client.py  test_nl2sql.py
